fix: resolved delete button invisible issue #2164

--- a/packages/dashboard/src/components/widgets/tile/tile.css
+++ b/packages/dashboard/src/components/widgets/tile/tile.css
@@ -14,3 +14,17 @@
   width: 100%;
   height: 2px;
 }
+
+.widget-tile-header {
+  overflow: hidden;
+}
+
+.widget-tile-header h1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.tile-button-contianer {
+  display: flex;
+}
